--- a/cmd-ex/Dockerfile
+++ b/cmd-ex/Dockerfile
@@ -2,3 +2,9 @@ FROM   ubuntu
 RUN    apt update  -y
 RUN    apt install nginx -y
 CMD    ["nginx", "-g", "daemon off,"]
+LABEL   key="car"
+        bat="ball"
+        india="one"
+EXPOSE  80
+ENV     URL=google.com
+ENV     one=two        
