--- a/cmd-ex/Dockerfile
+++ b/cmd-ex/Dockerfile
@@ -2,8 +2,8 @@ FROM   ubuntu
 RUN    apt update  -y
 RUN    apt install nginx -y
 CMD    ["nginx", "-g", "daemon off,"]
-LABEL   key="car"
-        bat="ball"
+LABEL   key="car" \
+        bat="ball" \
         india="one"
 EXPOSE  80
 ENV     URL=google.com
