--- a/entry&cmd/Dockerfile
+++ b/entry&cmd/Dockerfile
@@ -1,5 +1,5 @@
 FROM  ubuntu
 RUN   apt update -y
 RUN   apt install iputils-ping -y
-ENTRYPOINT [ "PING", "-c", "2"]
+ENTRYPOINT [ "ping", "-c", "2"]
 CMD       ["google.com"]
